# Haskell-Plutus-Code

./: .gitignore  LICENSE.txt
Chapter 01/: HC1T6.hs
Chapter 02/: HC2T1.hs  HC2T6.hs
Chapter 03/: HC3T2.hs  HC3T4.hs  HC3T7.hs
Chapter 04/: HC4T1.hs  HC4T2.hs  HC4T3.hs  HC4T8.hs
Chapter 05/: HC5T10.hs  HC5T2.hs  HC5T4.hs  HC5T5.hs  HC5T6.hs  HC5T7.hs
Chapter 06/: HC6T02.hs  HC6T03.hs  HC6T07.hs  HC6T09.hs
Chapter 07/: HC7T01.hs  HC7T02.hs  HC7T03.hs  HC7T04.hs  HC7T05.hs  HC7T06.hs  HC7T07.hs  HC7T08.hs  HC7T09.hs  HC7T10.hs
Chapter 08/: HC8T01.hs  HC8T02.hs  HC8T03.hs  HC8T04.hs  HC8T05.hs  HC8T06.hs  HC8T07.hs  HC8T08.hs  HC8T09.hs  HC8T10.hs
Chapter 09/: HC9T01.hs  HC9T02.hs  HC9T03.hs  HC9T04.hs  HC9T05.hs  HC9T06.hs  HC9T07.hs  HC9T08.hs  HC9T09.hs  HC9T10.hs
Chapter 1/: HC1T1.hs  HC1T2.hs  HC1T3.hs  HC1T4.hs  HC1T5.hs  HC1T7.hs  HC1T8.hs
Chapter 10/: HC10T01.hs  HC10T02.hs  HC10T03.hs  HC10T04.hs  HC10T05.hs  HC10T06.hs  HC10T07.hs  HC10T08.hs  HC10T09.hs  HC10T10.hs
Chapter 11/: HC11T01.hs  HC11T02.hs  HC11T03.hs  HC11T04.hs  HC11T05.hs  HC11T06.hs  HC11T07.hs  HC11T08.hs  HC11T09.hs  HC11T10.hs  names.sh
Chapter 12/: HC12T01.hs  HC12T02.hs  HC12T03.hs  HC12T04.hs  HC12T05.hs  HC12T06.hs  HC12T07.hs  HC12T08.hs  HC12T09.hs  HC12T10.hs  MathOps.hs
Chapter 13/: HC13T01.hs  HC13T02.hs  HC13T03.hs  HC13T04.hs  HC13T05.hs  HC13T06.hs  HC13T08.hs  HC13T09.hs  HC13T10.hs  SumNonEmpty.hs
Chapter 14/HC14T07-library/: CHANGELOG.md  HC14T07-library.cabal
Chapter 14/HC14T07-library/app/: Main.hs
Chapter 14/HC14T07-library/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Chapter 14/HC14T07-library/dist-newstyle/packagedb/ghc-9.4.8/: HC14T07-library-0.1.0.0-inplace.conf  package.cache
Chapter 14/HC14T07-library/src/: Hello.hs
Chapter 14/HC14T10-testSuite/: CHANGELOG.md  HC14T10-testSuite.cabal
Chapter 14/HC14T10-testSuite/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Chapter 14/HC14T10-testSuite/dist-newstyle/packagedb/ghc-9.4.8/: HC14T10-testSuite-0.1.0.0-inplace.conf  package.cache
Chapter 14/HC14T10-testSuite/src/: CharCounts.hs
Chapter 14/HC14T10-testSuite/test/: Spec.hs
Chapter 15/: HC15T01.hs  HC15T02.hs  HC15T03.hs  HC15T04.hs  HC15T05.hs  HC15T06.hs  HC15T07.hs  HC15T08.hs  HC15T09.hs  HC15T10.hs  aNumber.txt
Chapter 16/: HC16T01.hs  HC16T02.hs  HC16T03.hs  HC16T04.hs  HC16T05.hs  HC16T06.hs  HC16T07.hs  HC16T08.hs  HC16T09.hs  HC16T10.hs
Chapter 17/: HC17T01.hs  HC17T02.hs  HC17T03.hs  HC17T04.hs  HC17T05.hs  HC17T06.hs  HC17T07.hs  HC17T08.hs  HC17T09.hs  HC17T10.hs
Chapter 18/: HC18T01.hs  (+9 more)
Chapter 20/HC20T11/: CHANGELOG.md  HC20T11.cabal
Chapter 20/HC20T11/app/: Main.hs
Chapter 20/HC20T11/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Chapter 20/HC20T19/: CHANGELOG.md  HC20T19.cabal
Chapter 20/HC20T19/app/: Main.hs
Chapter 20/HC20T19/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
(+181 files in other folders)
