cabal-version:      3.0
name:               HC14T10-testSuite
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             delon500
maintainer:         dwenyeve@gmail.com
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library 
    import: warnings
    hs-source-dirs: src
    exposed-modules: CharCounts
    build-depends: base  >=4.17 && <5
    default-language: GHC2021

executable HC14T10-testSuite
    import:           warnings
    main-is:          Main.hs
    build-depends:    base >=4.17 && <5, HC14T10-testSuite
    hs-source-dirs:   app
    default-language: GHC2021

test-suite counts-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    build-depends:    base >=4.17 && <5, HC14T10-testSuite
    default-language: GHC2021
    ghc-options:      -Wall -Wcompat
