cabal-version:      3.0
name:               HC20T11
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             delon500
maintainer:         dwenyeve@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable HC20T11
    import:           warnings
    main-is:          Main.hs
    build-depends:    
        base ^>=4.17.2.1
        , mtl ^>=2.2.2
        , random ^>=1.2.1
    hs-source-dirs:   app
    default-language: GHC2021
