cabal-version:      3.0
name:               HC20T19
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             delon500
maintainer:         dwenyeve@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable HC20T19
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base ^>=4.17.2.1
        , mtl  ^>=2.2.2
    hs-source-dirs:   app
    default-language: GHC2021
